gobmkida/c2/is_ko
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/is_ko/src/engine/board.c:3002:24: error: use of undeclared identifier 'byte_9B389F'
v9 = ( unsigned __int8)byte_9B389F[pos]; 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/is_ko/src/engine/board.c:3016:25: error: use of undeclared identifier 'byte_9B388C'
v10 = ( unsigned __int8)byte_9B388C[pos]; 
                        ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/is_ko/src/obj/1/board.o] Error 1
